update with JS2 / project 4

--- a/index.html
+++ b/index.html
@@ -170,7 +170,8 @@
               </div>
             </div>
           </div>
-          <!-- Project Card 4 -->
+          <div class="carousel-item">
+            <!-- Project Card 4 -->
             <div class="project-container flex-column project4">
               <div class="project-top flex">
                 <div class="project-top-left flex"></div>
@@ -184,7 +185,7 @@
                 <div class="left-arrow flex">
                   <img class="arrow left-arrow flex" src="images/ico-chevron-left-dark.svg" alt="Previous image">
                 </div><div class="images-container">
-                  <div class="carousel-images flex project4-images image"></div>
+                  <div class="carousel-images flex project4-images image" id="carousel-images4"></div>
                 </div>
                 <div class="right-arrow flex">
                   <img class="arrow right-arrow flex" src="images/ico-chevron-right-dark.svg" alt="Next image">
@@ -202,6 +203,8 @@
                 </div>
               </div>
             </div>
+          </div>
+          
           </div>
         </div>
       </div>
