Adds movieTALK to flyin menu

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="projects-carousel">
         <div class="carousel">
           <div class="carousel-item">
-            Project Card 1
+            <!-- Project Card 1 -->
             <div class="project-container flex-column project1">
               <div class="project-top flex">
                 <div class="project-top-left flex"></div>
@@ -170,8 +170,8 @@
               </div>
             </div>
           </div>
+          <!-- Project Card 4 -->
           <div class="carousel-item">
-            <!-- Project Card 4 -->
             <div class="project-container flex-column project4">
               <div class="project-top flex">
                 <div class="project-top-left flex"></div>
@@ -195,7 +195,7 @@
                 <div class="image-counter flex">
                   <p>movieTALK<span class="image-count">1/8</span></p>
                 </div>
-                <p class="project-description">JavaScript 2 Course Assignment. You have been tasked with producing a new JavaScript front-end client for an existing social media platform. The client application must be attractive and responsive, but you have an otherwise blank slate in terms of theme design language.</p>
+                <p class="project-description">Produce a new JavaScript front-end client for an existing social media platform. The client application must be attractive and responsive. Vanilla JS, Bootstrap and Sass were primaries on this project.</p>
                 <div class="project-links flex">
                   <button class="button">Visit movieTALK</button>
                   <button class="button">GitHub Repository</button>
@@ -204,7 +204,7 @@
               </div>
             </div>
           </div>
-          
+
           </div>
         </div>
       </div>
@@ -276,6 +276,7 @@
           <li class="fly-in-item flex">Visit Game Hub</li>
           <li class="fly-in-item flex">Visit CMS</li>
           <li class="fly-in-item flex">Visit Chef's Table</li>
+          <li class="fly-in-item flex">Visit movieTALK</li>
         </ol>
       </li>
       <li class="flex project-list-item">
