--- a/about.html
+++ b/about.html
@@ -155,7 +155,9 @@
                 <li class="about-li">Visual Studio Code (VSC)</li>
                 <li class="about-li">HTML 5</li>
                 <li class="about-li">CSS 3 & SCSS</li>
+                <li class="about-li">Sass</li>
                 <li class="about-li">JavaScript</li>
+                <li class="about-li">Bootstrap</li>
               </ul>
               <div class="skill-icons flex">
                 <a href="https://www.adobe.com/uk/products/photoshop.html" target="_blank" rel="noreferrer">
@@ -214,6 +216,14 @@
                     alt="JavaScript"
                   />
                 </a>
+                <a href="https://getbootstrap.com/" target="_blank" rel="noreferrer">
+                  <span class="out-of-view">Bootstrap</span>
+                  <img
+                    class="colored-icons"
+                    src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/bootstrap-colored.svg"
+                    alt="Bootstrap"
+                  />
+                </a>
               </div>
             </div>
           </div>
@@ -252,7 +262,7 @@
                   <a href="https://www.linkedin.com/in/runeunhjem" target="_blank" rel="noreferrer">LinkedIn</a>
                 </li>
                 <li class="about-li">
-                  <a href="https://www.twitter.com/runeunhjem" target="_blank" rel="noreferrer">Twitter</a>
+                  <a href="https://www.twitter.com/runeunhjem" target="_blank" rel="noreferrer">X</a>
                 </li>
                 <li class="about-li">
                   <a href="https://www.twitter.com/runeunhjem" target="_blank" rel="noreferrer">YouTube</a>
@@ -300,7 +310,7 @@
                   />
                 </a>
                 <a href="https://www.twitter.com/runeunhjem" target="_blank" rel="noreferrer">
-                  <span class="out-of-view">Twitter</span>
+                  <span class="out-of-view">X</span>
                   <img
                     class="colored-icons"
                     src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/socials/twitter.svg"
