Updates intro text

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="intro-left flex"></div>
       <div class="intro-right flex-column">
         <p>Hi there. My name is Rune, I live in Kristiansand, and I am currently a student of <b>Front End Development</b> at Noroff School of Technology and Digital Media.</p>
-        <p class="desktop tablet">On this page you will find some of my work from the first semester of my studies.</p>
+        <p class="desktop tablet">Check out my latest projects.</p>
         <p class="desktop tablet-wide">Don't hesitate to contact me if you like what you see.</p>
         <p class="desktop tablet-wide">I am available for hire.</p>
         <div class="weblink">
