Sets up dreambids slider and adds slide images

--- a/index.html
+++ b/index.html
@@ -204,6 +204,40 @@
               </div>
             </div>
           </div>
+          <!-- Project Card 5 -->
+          <div class="carousel-item">
+            <div class="project-container flex-column project5">
+              <div class="project-top flex">
+                <div class="project-top-left flex"></div>
+                <div class="project-top-middle flex-column">
+                  <h2 class="project-title">DreamBids</h2>
+                  <p class="project-tagline">Find that dreamy item!</p>
+                </div>
+                <div class="project-top-right flex"></div>
+              </div>
+              <div class="project-image-carousel flex">
+                <div class="left-arrow flex">
+                  <img class="arrow left-arrow flex" src="images/ico-chevron-left-dark.svg" alt="Previous image">
+                </div><div class="images-container">
+                  <div class="carousel-images flex project5-images image" id="carousel-images5"></div>
+                </div>
+                <div class="right-arrow flex">
+                  <img class="arrow right-arrow flex" src="images/ico-chevron-right-dark.svg" alt="Next image">
+                </div>
+              </div>
+              <div class="project-bottom flex-column">
+                <div class="image-counter flex">
+                  <p>DreamBids<span class="image-count">1/8</span></p>
+                </div>
+                <p class="project-description">An auction site is looking to launch a website where users can add items to be bid on and bid on items other users have put up for auction. Vanilla JS, Bootstrap and Sass were primaries on this project.</p>
+                <div class="project-links flex">
+                  <button class="button">Visit DremBids</button>
+                  <button class="button">GitHub Repository</button>
+                  <button class="button">Project README</button>
+                </div>
+              </div>
+            </div>
+          </div>
 
           </div>
         </div>
