Adds dreambids images to slider

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <h2 class="heading flex">Relevant Projects</h2>
       <div class="projects-carousel-nav flex">
         <div class="projects-counter flex">
-          <p>Project<span class="count">1/4</span></p>
+          <p>Project<span class="count">1/5</span></p>
         </div>
         <div class=" button-container">
           <button class="button projects-btn flex" id="back-button">
@@ -227,7 +227,7 @@
               </div>
               <div class="project-bottom flex-column">
                 <div class="image-counter flex">
-                  <p>DreamBids<span class="image-count">1/8</span></p>
+                  <p>DreamBids<span class="image-count">1/10</span></p>
                 </div>
                 <p class="project-description">An auction site is looking to launch a website where users can add items to be bid on and bid on items other users have put up for auction. Vanilla JS, Bootstrap and Sass were primaries on this project.</p>
                 <div class="project-links flex">
@@ -311,6 +311,7 @@
           <li class="fly-in-item flex">Visit CMS</li>
           <li class="fly-in-item flex">Visit Chef's Table</li>
           <li class="fly-in-item flex">Visit movieTALK</li>
+          <li class="fly-in-item flex">Visit DreamBids</li>
         </ol>
       </li>
       <li class="flex project-list-item">
