Adds dreambids to menu on all pages and opens links from menu in new window

--- a/contact.html
+++ b/contact.html
@@ -189,6 +189,7 @@
             <li class="fly-in-item flex">Visit CMS</li>
             <li class="fly-in-item flex">Visit Chef's Table</li>
             <li class="fly-in-item flex">Visit movieTALK</li>
+            <li class="fly-in-item flex">Visit DreamBids</li>
           </ol>
         </li>
         <li class="flex project-list-item">
