--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="keywords" content="Works, Projects, Overviev, About me, Rune Unhjem, Runicorn Design, Front End Developer">
-  <meta name="description" content="Portfolio 1, Course Assignment, Read all about me, Rune Unhjem, Runicorn Design, Front End Developer">
+  <meta name="keywords" content="Portfolio, Projects, Rune Unhjem, Wed Design Kristiansand Agder, RUNDEV Front End Developer Kristiansand Agder">
+  <meta name="description" content="Portfolio 1, Course Assignment, Rune Unhjem, RUNDEV Front End Developer Kristiansand Agder">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/carousel.css">
   <link rel="stylesheet" href="css/footer.css">
