Fixes som spelling

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="Works, Projects, Overviev, About me, Rune Unhjem, Runicorn Design, Front End Developer" />
+    <meta name="keywords" content="Works, Projects, Overview, About me, Rune Unhjem, Runicorn Design, Front End Developer" />
     <meta name="description" content="Portfolio 1, Course Assignment, My works, projects and all about me" />
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/carousel.css" />
@@ -55,7 +55,7 @@
                   Noroff School of Technology and Digital Media and I am scheduled to finish up June 2024.
                 </li>
                 <li class="about-li">
-                  I find coding to be highly engaging, and love solving the everyday issues that will always occure.
+                  I find coding to be highly engaging, and love solving the everyday issues that will always occur.
                 </li>
                 <li class="about-li">Learning every day, hoping to soon join the real world of applicable coding.</li>
                 <li class="about-li">I am available for hire.</li>
@@ -91,12 +91,12 @@
                   tech and science.
                 </li>
                 <li class="about-li">
-                  I made my first real subscripion based website back in the late '90's, and made an average of 30K NOK/mnth.
+                  I made my first real subscription based website back in the late '90's, and made an average of 30K NOK/month.
                   Unfortunately that was just about what the ISDN phone bill was as well every month, so it did not last to
                   long.
                 </li>
                 <li class="about-li">
-                  I've made a music album available on Spotify, done sales, intervjues and for many years seller and
+                  I've made a music album available on Spotify, done sales, interviews and for many years seller and
                   department manager, computers at Elkjøp Ålesund.
                 </li>
               </ul>
