--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 </div>
                 <p class="project-description">An auction site is looking to launch a website where users can add items to be bid on and bid on items other users have put up for auction. Vanilla JS, Bootstrap and Sass were primaries on this project.</p>
                 <div class="project-links flex">
-                  <button class="button">Visit DremBids</button>
+                  <button class="button">Visit DreamBids</button>
                   <button class="button">GitHub Repository</button>
                   <button class="button">Project README</button>
                 </div>
