Adds some skills

--- a/about.html
+++ b/about.html
@@ -91,9 +91,9 @@
                   tech and science.
                 </li>
                 <li class="about-li">
-                  I made my first real subscription based website back in the late '90's, and made an average of 30K NOK/month.
-                  Unfortunately that was just about what the ISDN phone bill was as well every month, so it did not last to
-                  long.
+                  I made my first real subscription based website back in the late '90's, and made an average of 30K
+                  NOK/month. Unfortunately that was just about what the ISDN phone bill was as well every month, so it did
+                  not last to long.
                 </li>
                 <li class="about-li">
                   I've made a music album available on Spotify, done sales, interviews and for many years seller and
@@ -158,6 +158,9 @@
                 <li class="about-li">Sass</li>
                 <li class="about-li">JavaScript</li>
                 <li class="about-li">Bootstrap</li>
+                <li class="about-li">Vite</li>
+                <li class="about-li">React</li>
+                <li class="about-li">Tailwind CSS</li>
               </ul>
               <div class="skill-icons flex">
                 <a href="https://www.adobe.com/uk/products/photoshop.html" target="_blank" rel="noreferrer">
@@ -165,16 +168,14 @@
                   <img
                     class="colored-icons"
                     src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/photoshop-colored.svg"
-                    alt="Photoshop"
-                  />
+                    alt="Photoshop" />
                 </a>
                 <a href="https://www.figma.com/" target="_blank" rel="noreferrer">
                   <span class="out-of-view">Figma</span>
                   <img
                     class="colored-icons"
                     src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/figma-colored.svg"
-                    alt="Figma"
-                  />
+                    alt="Figma" />
                 </a>
                 <a href="https://wordpress.com/" target="_blank" rel="noreferrer">
                   <span class="out-of-view">WordPress</span>
@@ -189,40 +190,56 @@
                   <img
                     class="colored-icons"
                     src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/html5-colored.svg"
-                    alt="HTML5"
-                  />
+                    alt="HTML5" />
                 </a>
                 <a href="https://www.w3.org/TR/CSS/#css" target="_blank" rel="noreferrer">
                   <span class="out-of-view">CSS 3</span>
                   <img
                     class="colored-icons"
                     src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/css3-colored.svg"
-                    alt="CSS3"
-                  />
+                    alt="CSS3" />
                 </a>
                 <a href="https://sass-lang.com/" target="_blank" rel="noreferrer">
                   <span class="out-of-view">CSS 3</span>
                   <img
                     class="colored-icons"
                     src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/sass-colored.svg"
-                    alt="Sass"
-                  />
+                    alt="Sass" />
                 </a>
                 <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank" rel="noreferrer">
                   <span class="out-of-view">JavaScript</span>
                   <img
                     class="colored-icons"
                     src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/javascript-colored.svg"
-                    alt="JavaScript"
-                  />
+                    alt="JavaScript" />
                 </a>
                 <a href="https://getbootstrap.com/" target="_blank" rel="noreferrer">
                   <span class="out-of-view">Bootstrap</span>
                   <img
                     class="colored-icons"
                     src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/bootstrap-colored.svg"
-                    alt="Bootstrap"
-                  />
+                    alt="Bootstrap" />
+                </a>
+                <a href="https://vite.org/" target="_blank" rel="noreferrer">
+                  <span class="out-of-view">Vite</span>
+                  <img
+                    class="colored-icons"
+                    src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/vite-colored.svg"
+                    alt="Vite" />
+                </a>
+                <a href="https://react.dev/" target="_blank" rel="noreferrer">
+                  <span class="out-of-view">React</span>
+                  <img
+                    class="colored-icons"
+                    src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/react-colored.svg"
+                    alt="React" />
+                </a>
+                <a href="https://tailwindcss.com/" target="_blank" rel="noreferrer">
+                  <span class="out-of-view">Tailwind CSS</span>
+                  <img
+                    class="colored-icons"
+                    src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/skills/tailwindcss-colored.svg"
+                    alt="Tailwind CSS" />
                 </a>
               </div>
             </div>
@@ -274,56 +291,49 @@
                   <img
                     class="colored-icons"
                     src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/socials/discord.svg"
-                    alt="Discord icon"
-                  />
+                    alt="Discord icon" />
                 </a>
                 <a href="https://www.facebook.com/runeunhjem" target="_blank" rel="noreferrer">
                   <span class="out-of-view">Facebook</span>
                   <img
                     class="colored-icons"
                     src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/socials/facebook.svg"
-                    alt="Facebook icon"
-                  />
+                    alt="Facebook icon" />
                 </a>
                 <a href="https://www.github.com/runeunhjem" target="_blank" rel="noreferrer">
                   <span class="out-of-view">GitHub</span>
                   <img
                     class="colored-icons"
                     src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/socials/github.svg"
-                    alt="GitHub icon"
-                  />
+                    alt="GitHub icon" />
                 </a>
                 <a href="http://www.instagram.com/runeunhjem" target="_blank" rel="noreferrer">
                   <span class="out-of-view">Instagram</span>
                   <img
                     class="colored-icons"
                     src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/socials/instagram.svg"
-                    alt="Instagram icon"
-                  />
+                    alt="Instagram icon" />
                 </a>
                 <a href="https://www.linkedin.com/in/runeunhjem" target="_blank" rel="noreferrer">
                   <span class="out-of-view">LinkedIn</span>
                   <img
                     class="colored-icons"
                     src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/socials/linkedin.svg"
-                    alt="LinkedIn icon"
-                  />
+                    alt="LinkedIn icon" />
                 </a>
                 <a href="https://www.twitter.com/runeunhjem" target="_blank" rel="noreferrer">
                   <span class="out-of-view">X</span>
                   <img
                     class="colored-icons"
                     src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/socials/twitter.svg"
-                    alt="Twitter icon"
-                  />
+                    alt="Twitter icon" />
                 </a>
                 <a href="https://www.youtube.com/c/runeunhjem" target="_blank" rel="noreferrer">
                   <span class="out-of-view">YouTube</span>
                   <img
                     class="colored-icons"
                     src="https://raw.githubusercontent.com/danielcranney/readme-generator/main/public/icons/socials/youtube.svg"
-                    alt="YouTube icon"
-                  />
+                    alt="YouTube icon" />
                 </a>
               </div>
             </div>
@@ -374,8 +384,7 @@
           <a
             class="link-reset"
             href="https://open.spotify.com/artist/56ZSG2Q1JKydX5X9rTZxrq?si=787xAZCQT2yu8PKN5Dhopw"
-            target="_blank"
-          >
+            target="_blank">
             <span class="out-of-view">Spotify</span>
             <img class="social-icon spotify-icon" src="images/ico-spotify.svg" alt="Spotify" />
           </a>
