Changes some text and links

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
       <h1 class="out-of-view">Introduction</h1>
       <div class="intro-left flex"></div>
       <div class="intro-right flex-column">
-        <p>Hi there. My name is Rune, I live in Kristiansand, and I am currently a student of <b>Front End Development</b> at Noroff School of Technology and Digital Media.</p>
-        <p class="desktop tablet">Check out my latest projects.</p>
+        <p>Hi there and welcome. Based in Kristiansand, Just finished up a 2 year study of <b>Front End Development</b> at Noroff School of Technology and Digital Media.</p>
+        <p class="desktop tablet">Take a look at my relevant projects, or if interested, get a little more personal information in the about section.</p>
         <p class="desktop tablet-wide">Don't hesitate to contact me if you like what you see.</p>
         <p class="desktop tablet-wide">I am available for hire.</p>
         <div class="weblink">
@@ -265,7 +265,7 @@
     </div>
     <div class="footer-center flex-column">
       <p id="phone"><a class="phone link-reset" href="tel:+4793267611">+47 93 26 76 11</a></p>
-      <p id="weblink"><a class="weblink link-reset" href="https://www.runeunhjem.no">runeunhjem.no</a></p>
+      <p id="weblink"><a class="weblink link-reset" href="https://portfolio1-ca.netlify.app/">Portfolio</a></p>
       <p id="mail"><a class="mail link-reset" href="mailto:runeunhjem@gmail.com">runeunhjem@gmail.com</a></p>
       <div class="social flex">
         <a class="link-reset" href="https://www.linkedin.com/in/runeunhjem/" target="_blank">
