--- a/about.html
+++ b/about.html
@@ -51,14 +51,17 @@
             <div class="intro-right about-right flex-column">
               <ul>
                 <li class="about-li">
-                  I live in Kristiansand with my fiancé, and I am currently a student of <b>Front End Development</b> at
-                  Noroff School of Technology and Digital Media and I am scheduled to finish up June 2024.
+                  I live in Kristiansand with my fiancé, and I have just finished 2 years as a student of
+                  <b>Front End Development</b> at Noroff School of Technology and Digital Media with graduation June 2024.
                 </li>
                 <li class="about-li">
                   I find coding to be highly engaging, and love solving the everyday issues that will always occur.
                 </li>
                 <li class="about-li">Learning every day, hoping to soon join the real world of applicable coding.</li>
                 <li class="about-li">I am available for hire.</li>
+                <li class="about-li">
+                  Plan to do one more year of school starting August 2024, this time <b>Backend Development</b>.
+                </li>
                 <li class="about-li">
                   My spare time goes to a passion for cooking, watching great movies and tv-shows, as well as keeping up with
                   all things tech & science.
@@ -362,7 +365,7 @@
       </div>
       <div class="footer-center flex-column">
         <p id="phone"><a class="phone link-reset" href="tel:+4793267611">+47 93 26 76 11</a></p>
-        <p id="weblink"><a class="weblink link-reset" href="https://www.runeunhjem.no">runeunhjem.no</a></p>
+        <p id="weblink"><a class="weblink link-reset" href="https://portfolio1-ca.netlify.app/">Portfolio</a></p>
         <p id="mail"><a class="mail link-reset" href="mailto:runeunhjem@gmail.com">runeunhjem@gmail.com</a></p>
         <div class="social flex">
           <a class="link-reset" href="https://www.linkedin.com/in/runeunhjem/" target="_blank">
