Adds cv to footer

--- a/about.html
+++ b/about.html
@@ -366,6 +366,7 @@
       <div class="footer-center flex-column">
         <p id="phone"><a class="phone link-reset" href="tel:+4793267611">+47 93 26 76 11</a></p>
         <p id="weblink"><a class="weblink link-reset" href="https://portfolio1-ca.netlify.app/">Portfolio</a></p>
+        <p id="cv"><a class="weblink link-reset" href="https://flowcv.com/resume/otcg7cttth">My CV</a></p>
         <p id="mail"><a class="mail link-reset" href="mailto:runeunhjem@gmail.com">runeunhjem@gmail.com</a></p>
         <div class="social flex">
           <a class="link-reset" href="https://www.linkedin.com/in/runeunhjem/" target="_blank">
