--- a/feedback.html
+++ b/feedback.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="Works, Projects, Overviev, About me, Rune Unhjem, Runicorn Design, Front End Developer" />
+    <meta name="keywords" content="Works, Projects, Overview, About me, Rune Unhjem, Runicorn Design, Front End Developer" />
     <meta name="description" content="Portfolio 1, Course Assignment, User feedback" />
     <link rel="stylesheet" href="css/styles.css" />
     <link rel="stylesheet" href="css/carousel.css" />
@@ -63,6 +63,7 @@
       <div class="footer-center flex-column">
         <p id="phone"><a class="phone link-reset" href="tel:+4793267611">+47 93 26 76 11</a></p>
         <p id="weblink"><a class="weblink link-reset" href="https://portfolio1-ca.netlify.app/">Portfolio</a></p>
+        <p id="cv"><a class="weblink link-reset" href="https://flowcv.com/resume/otcg7cttth">My CV</a></p>
         <p id="mail"><a class="mail link-reset" href="mailto:runeunhjem@gmail.com">runeunhjem@gmail.com</a></p>
         <div class="social flex">
           <a class="link-reset" href="https://www.linkedin.com/in/runeunhjem/" target="_blank">
