Adds cards for cgg and holidaze

--- a/index.html
+++ b/index.html
@@ -238,6 +238,74 @@
               </div>
             </div>
           </div>
+          <!-- Project Card 6 -->
+          <div class="carousel-item">
+            <div class="project-container flex-column project5">
+              <div class="project-top flex">
+                <div class="project-top-left flex"></div>
+                <div class="project-top-middle flex-column">
+                  <h2 class="project-title">CGG</h2>
+                  <p class="project-tagline">Online Shopping</p>
+                </div>
+                <div class="project-top-right flex"></div>
+              </div>
+              <div class="project-image-carousel flex">
+                <div class="left-arrow flex">
+                  <img class="arrow left-arrow flex" src="images/ico-chevron-left-dark.svg" alt="Previous image">
+                </div><div class="images-container">
+                  <div class="carousel-images flex project5-images image" id="carousel-images5"></div>
+                </div>
+                <div class="right-arrow flex">
+                  <img class="arrow right-arrow flex" src="images/ico-chevron-right-dark.svg" alt="Next image">
+                </div>
+              </div>
+              <div class="project-bottom flex-column">
+                <div class="image-counter flex">
+                  <p>CGG<span class="image-count">1/10</span></p>
+                </div>
+                <p class="project-description">The Homepage should have a list of all the products. There should be a look-ahead search bar that filters products when typing in a product name. React, Vite, Bootstrap and Styled Components were primaries on this project.</p>
+                <div class="project-links flex">
+                  <button class="button">Visit DreamBids</button>
+                  <button class="button">GitHub Repository</button>
+                  <button class="button">Project README</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Project Card 7 -->
+          <div class="carousel-item">
+            <div class="project-container flex-column project5">
+              <div class="project-top flex">
+                <div class="project-top-left flex"></div>
+                <div class="project-top-middle flex-column">
+                  <h2 class="project-title">Holidaze</h2>
+                  <p class="project-tagline">Travels made easy!</p>
+                </div>
+                <div class="project-top-right flex"></div>
+              </div>
+              <div class="project-image-carousel flex">
+                <div class="left-arrow flex">
+                  <img class="arrow left-arrow flex" src="images/ico-chevron-left-dark.svg" alt="Previous image">
+                </div><div class="images-container">
+                  <div class="carousel-images flex project5-images image" id="carousel-images5"></div>
+                </div>
+                <div class="right-arrow flex">
+                  <img class="arrow right-arrow flex" src="images/ico-chevron-right-dark.svg" alt="Next image">
+                </div>
+              </div>
+              <div class="project-bottom flex-column">
+                <div class="image-counter flex">
+                  <p>DreamBids<span class="image-count">1/10</span></p>
+                </div>
+                <p class="project-description">A newly launched accommodation booking site called Holidaze has approached you to develop a brand new front end for their application. React, Vite and Tailwind were primaries on this project.</p>
+                <div class="project-links flex">
+                  <button class="button">Visit DreamBids</button>
+                  <button class="button">GitHub Repository</button>
+                  <button class="button">Project README</button>
+                </div>
+              </div>
+            </div>
+          </div>
 
           </div>
         </div>
@@ -313,6 +381,8 @@
           <li class="fly-in-item flex">Visit Chef's Table</li>
           <li class="fly-in-item flex">Visit movieTALK</li>
           <li class="fly-in-item flex">Visit DreamBids</li>
+          <li class="fly-in-item flex">Visit CGG</li>
+          <li class="fly-in-item flex">Visit Holidaze</li>
         </ol>
       </li>
       <li class="flex project-list-item">
