Adds link to new portfolio

--- a/feedback.html
+++ b/feedback.html
@@ -62,7 +62,9 @@
       </div>
       <div class="footer-center flex-column">
         <p id="phone"><a class="phone link-reset" href="tel:+4793267611">+47 93 26 76 11</a></p>
-        <p id="weblink"><a class="weblink link-reset" href="https://portfolio1-ca.netlify.app/">Portfolio</a></p>
+        <p id="weblink">
+          <a class="weblink link-reset" href="https://rundev-portfolio.netlify.app/">Portfolio (With React)</a>
+        </p>
         <p id="cv"><a class="weblink link-reset" href="https://flowcv.com/resume/otcg7cttth">My CV</a></p>
         <p id="mail"><a class="mail link-reset" href="mailto:runeunhjem@gmail.com">runeunhjem@gmail.com</a></p>
         <div class="social flex">
@@ -85,8 +87,7 @@
           <a
             class="link-reset"
             href="https://open.spotify.com/artist/56ZSG2Q1JKydX5X9rTZxrq?si=787xAZCQT2yu8PKN5Dhopw"
-            target="_blank"
-          >
+            target="_blank">
             <span class="out-of-view">Spotify</span>
             <img class="social-icon spotify-icon" src="images/ico-spotify.svg" alt="Spotify" />
           </a>
