--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
     </div>
   </header>
   <main class="index flex-column">
+    <div class="portfolio-container">
+      <a href="https://rundev-portfolio.netlify.app/">
+        <div class="portfolio-link">New portfolio here (With React, Vite & Tailwind CSS)</div>
+      </a>
+    </div>
     <section class="intro flex">
       <h1 class="out-of-view">Introduction</h1>
       <div class="intro-left flex"></div>
@@ -333,7 +338,7 @@
     </div>
     <div class="footer-center flex-column">
       <p id="phone"><a class="phone link-reset" href="tel:+4793267611">+47 93 26 76 11</a></p>
-      <p id="weblink"><a class="weblink link-reset" href="https://portfolio1-ca.netlify.app/">Portfolio</a></p>
+      <p id="weblink"><a class="weblink link-reset" href="https://rundev-portfolio.netlify.app/">Portfolio (With React)</a></p>
       <p id="cv"><a class="weblink link-reset" href="https://flowcv.com/resume/otcg7cttth">My CV</a></p>
       <p id="mail"><a class="mail link-reset" href="mailto:runeunhjem@gmail.com">runeunhjem@gmail.com</a></p>
       <div class="social flex">
