--- a/contact.html
+++ b/contact.html
@@ -40,8 +40,7 @@
               <a
                 class="mail link-reset"
                 target="_blank"
-                href="https://www.google.com/maps/place/Slettheiveien+81E,+4626+Kristiansand/@58.1365238,7.9343861,14z/data=!4m6!3m5!1s0x463802a4c32a6519:0x551444ef8f3fd02b!8m2!3d58.1349737!4d7.939219!16s%2Fg%2F11cs932l7p?authuser=0&entry=ttu"
-              >
+                href="https://www.google.com/maps/place/Slettheiveien+81E,+4626+Kristiansand/@58.1365238,7.9343861,14z/data=!4m6!3m5!1s0x463802a4c32a6519:0x551444ef8f3fd02b!8m2!3d58.1349737!4d7.939219!16s%2Fg%2F11cs932l7p?authuser=0&entry=ttu">
                 <p class="contact-info-text info">Rune Unhjem</p>
                 <p class="contact-info-text info">Slettheiveien 81E</p>
                 <p class="contact-info-text info">4624 Kristiansand</p></a
@@ -68,8 +67,7 @@
                 name="your-name"
                 aria-required="true"
                 aria-label="Name or Nickname"
-                placeholder="Name or Nickname"
-              />
+                placeholder="Name or Nickname" />
             </div>
             <div class="form-label-error">
               <div class="label-error-wrapper">
@@ -82,8 +80,7 @@
                 name="your-email"
                 aria-required="true"
                 aria-label="Valid Email Address"
-                placeholder="Valid Email"
-              />
+                placeholder="Valid Email" />
             </div>
             <div class="form-label-error">
               <div class="label-error-wrapper">
@@ -96,8 +93,7 @@
                 name="your-subject"
                 aria-required="true"
                 aria-label="Message Subject"
-                placeholder="Message Subject"
-              />
+                placeholder="Message Subject" />
             </div>
             <div class="form-label-error">
               <div class="label-error-wrapper">
@@ -109,8 +105,7 @@
                 name="your-message"
                 aria-required="true"
                 aria-label="Your message"
-                placeholder="Your message"
-              ></textarea>
+                placeholder="Your message"></textarea>
             </div>
             <button type="submit" class="contact-button" id="send-message" name="Submit">Send Message</button>
             <div class="success comment-posted" id="message-sent"></div>
@@ -139,7 +134,9 @@
       </div>
       <div class="footer-center flex-column">
         <p id="phone"><a class="phone link-reset" href="tel:+4793267611">+47 93 26 76 11</a></p>
-        <p id="weblink"><a class="weblink link-reset" href="https://portfolio1-ca.netlify.app/">Portfolio</a></p>
+        <p id="weblink">
+          <a class="weblink link-reset" href="https://rundev-portfolio.netlify.app/">Portfolio (With React)</a>
+        </p>
         <p id="cv"><a class="weblink link-reset" href="https://flowcv.com/resume/otcg7cttth">My CV</a></p>
         <p id="mail"><a class="mail link-reset" href="mailto:runeunhjem@gmail.com">runeunhjem@gmail.com</a></p>
         <div class="social flex">
@@ -162,8 +159,7 @@
           <a
             class="link-reset"
             href="https://open.spotify.com/artist/56ZSG2Q1JKydX5X9rTZxrq?si=787xAZCQT2yu8PKN5Dhopw"
-            target="_blank"
-          >
+            target="_blank">
             <span class="out-of-view">Spotify</span>
             <img class="social-icon spotify-icon" src="images/ico-spotify.svg" alt="Spotify" />
           </a>
