Updates adress and living area

--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
             <div class="intro-right about-right flex-column">
               <ul>
                 <li class="about-li">
-                  I live in Kristiansand with my fiancé, and I have just finished 2 years as a student of
+                  I live in Harstad, and summer 2024 I finished 2 years as a student of
                   <b>Front End Development</b> at Noroff School of Technology and Digital Media with graduation June 2024.
                 </li>
                 <li class="about-li">
