--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="keywords" content="Portfolio, Projects, Rune Unhjem, Wed Design Kristiansand Agder, RUNDEV Front End Developer Kristiansand Agder">
-  <meta name="description" content="Portfolio 1, Course Assignment, Rune Unhjem, RUNDEV Front End Developer Kristiansand Agder">
+  <meta name="keywords" content="Portfolio, Projects, Rune Unhjem, Wed Design Harstad Troms, RUNDEV Front End Developer">
+  <meta name="description" content="Portfolio 1, Course Assignment, Rune Unhjem, RUNDEV Front End Developer Harstad Troms">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/carousel.css">
   <link rel="stylesheet" href="css/footer.css">
@@ -42,7 +42,7 @@
       <h1 class="out-of-view">Introduction</h1>
       <div class="intro-left flex"></div>
       <div class="intro-right flex-column">
-        <p>Hi there and welcome. Based in Kristiansand, Just finished up a 2 year study of <b>Front End Development</b> at Noroff School of Technology and Digital Media.</p>
+        <p>Hi there and welcome. Based in Harstad, summer 2024, I finished up a 2 year study of <b>Front End Development</b> at Noroff School of Technology and Digital Media.</p>
         <p class="desktop tablet">Take a look at my relevant projects, or if interested, get a little more personal information in the about section.</p>
         <p class="desktop tablet-wide">Don't hesitate to contact me if you like what you see.</p>
         <p class="desktop tablet-wide">I am available for hire.</p>
