Adds update note to link to new portfolio

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <main class="index flex-column">
     <div class="portfolio-container">
       <a href="https://rundev-portfolio.netlify.app/">
-        <div class="portfolio-link">New portfolio here (With React, Vite & Tailwind CSS)</div>
+        <div class="portfolio-link">This portfolio is not being updated. New updated portfolio here (With React, Vite & Tailwind CSS)</div>
       </a>
     </div>
     <section class="intro flex">
